--- a/src/SinusBotAPI-NET/SinusBotAPI-NET.csproj
+++ b/src/SinusBotAPI-NET/SinusBotAPI-NET.csproj
@@ -10,6 +10,7 @@
         <RepositoryUrl>https://github.com/manuelmayer-dev/SinusBotAPI-NET</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>Bot, SinusBot, Music, API</PackageTags>
+        <Version>0.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
