--- a/src/SinusBotAPI-NET/SinusBotAPI-NET.csproj
+++ b/src/SinusBotAPI-NET/SinusBotAPI-NET.csproj
@@ -5,6 +5,7 @@
         <Authors>Manuel Mayer</Authors>
         <Description>A client for the SinusBot API, written in C#/.NET</Description>
         <Copyright>Manuel Mayer</Copyright>
+        <PackageId>ManuelMayer.SinusBotAPI-NET</PackageId>
         <PackageProjectUrl>https://github.com/manuelmayer-dev/SinusBotAPI-NET</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/manuelmayer-dev/SinusBotAPI-NET/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/manuelmayer-dev/SinusBotAPI-NET</RepositoryUrl>
