--- a/.github/workflows/publish_nuget.yml
+++ b/.github/workflows/publish_nuget.yml
@@ -30,15 +30,9 @@ jobs:
 
       - name: Create NuGet packages
         run: |
-          dotnet pack src/SinusBotAPI-NET/SinusBotAPI-NET.csproj --configuration Release
-          dotnet pack src/SinusBotAPI-NET.DataTypes.V1/SinusBotAPI-NET.DataTypes.V1.csproj --configuration Release
-
-      - name: Setup Publish NuGet package
-        uses: nuget/setup-nuget@v1
-        with:
-          nuget-api-key: ${{ secrets.NUGET_API_KEY }}
+          dotnet pack src/SinusBotAPI-NET/SinusBotAPI-NET.csproj --configuration Release --output output
+          dotnet pack src/SinusBotAPI-NET.DataTypes.V1/SinusBotAPI-NET.DataTypes.V1.csproj --configuration Release output
 
       - name: Publish NuGet packages
         run: |
-          dotnet nuget push src/SinusBotAPI-NET/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json
-          dotnet nuget push src/SinusBotAPI-NET.DataTypes.V1/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json
+          dotnet nuget push output/*.nupkg -k ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
